<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/button_refresh"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:contentDescription="@string/refreshButton_contentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_flag"
        app:layout_constraintVertical_bias="0.899"
        app:srcCompat="@drawable/refresh_icon" />

    <ImageView
        android:id="@+id/imageView_flag"
        android:layout_width="215dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagelag_contentdescription"
        android:src="@drawable/indian_flag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_tittle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chonburi"
        android:text="@string/textView_tittle"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/textView_totalCases"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_flag"
        app:layout_constraintVertical_bias="0.248" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/textView_deaths"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.435" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/textView_Recovered"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView_flag"
        app:layout_constraintVertical_bias="0.245" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/textView_activeCases"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/textView_deaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/emblema_one"
        android:text="@string/deaths"
        app:layout_constraintBottom_toTopOf="@+id/button_refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.195" />

    <TextView
        android:id="@+id/textView_activeCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/emblema_one"
        android:text="@string/activeCases"
        app:layout_constraintBottom_toTopOf="@+id/button_refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.195" />

    <TextView
        android:id="@+id/textView_recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/emblema_one"
        android:text="@string/recovered"
        android:textColor="@android:color/secondary_text_light"
        app:layout_constraintBottom_toTopOf="@+id/button_refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_flag"
        app:layout_constraintVertical_bias="0.381" />

    <TextView
        android:id="@+id/textView_totalCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/emblema_one"
        android:text="@string/totalCases"
        app:layout_constraintBottom_toTopOf="@+id/button_refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.064" />


    />
</androidx.constraintlayout.widget.ConstraintLayout>